--- a/#source/header.html
+++ b/#source/header.html
@@ -1,8 +1,8 @@
-<header class="header" id="header">
-    <div class="header__burger">
+<header class="header block" id="header">
+    <!-- <div class="header__burger">
         <span></span>
-    </div>
-    <div class="header__menu-container" id="menu">
+    </div> -->
+    <!-- <div class="header__menu-container" id="menu">
         <nav class="header__menu menu">
             <a class="menu__link white-text" href="#header">Главная</a>
             <a class="menu__link white-text" href="#all-projects">Наши проекты</a>
@@ -10,11 +10,6 @@
             <a class="menu__link white-text" href="#subscribe">Новости</a>
             <a class="menu__link white-text" href="#contacts">Контакты</a>
         </nav>
-    </div>
-    <div class="header__container">
-        <p>Передовая IT студия</p>
-        <h1 class="header__title title white-text">Мы создаем легкие решения сложных задач и проблем</h1>
-        <div class="header__button-link button-link"><a href="#about-us">Наши проекты</a></div>
+    </div> -->
 
-    </div>
 </header>
