--- a/#source/footer.html
+++ b/#source/footer.html
@@ -1,44 +1,43 @@
-<footer class="footer">
+<footer class="footer block">
     <nav class="footer__menu">
         <ul class="footer__menu-list">
-            <a href="" class="footer__menu-list-title contact-links" id="contacts">Контактная информация</a>
-            <ul class="footer__sub-menu-list">
-                <li class="footer__sub-menu-link contact-link__email"><a href="mailto:test@test.ru">test@test.ru</a></li>
-                <li class="footer__sub-menu-link contact-link__phone"><a href="tel:+87775556699">+8 777 555 66 99</a></li>
-                <li class="footer__sub-menu-link contact-link__address"><a href="">Москва, Бульвар Ленина 33</a></li>
-            </ul>
+            <li class="footer__menu-link contact-links" id="contacts">Контактная информация
+                <span class="footer__menu-arrow  arrow"></span>
+                <ul class="footer__sub-menu-list">
+                    <li class="footer__sub-menu-link contact-link__email"><a href="mailto:test@test.ru">test@test.ru</a></li>
+                    <li class="footer__sub-menu-link contact-link__phone"><a href="tel:+87775556699">+8 777 555 66 99</a></li>
+                    <li class="footer__sub-menu-link contact-link__address"><a href="">Москва, Бульвар Ленина 33</a></li>
+                </ul>
+            </li>
+            <li class="footer__menu-link">Основные ссылки
+                <span class=" footer__menu-arrow arrow "></span>
+                <ul class="footer__sub-menu-list ">
+                    <li class="footer__sub-menu-link "><a href="#header ">Главная</a></li>
+                    <li class="footer__sub-menu-link "><a href="#all-projects ">Наши проекты</a></li>
+                    <li class="footer__sub-menu-link "><a href="#all-services ">Наши услуги</a></li>
+                    <li class="footer__sub-menu-link "><a href="#contacts ">Контакты</a></li>
+                </ul>
+            </li>
+            <li class="footer__menu-link">Наши проекты
+                <span class="footer__menu-arrow arrow "></span>
+                <ul class="footer__sub-menu-list ">
+                    <li class="footer__sub-menu-link "><a href="">РосНано</a></li>
+                    <li class="footer__sub-menu-link "><a href="">Сколково</a></li>
+                    <li class="footer__sub-menu-link "><a href="">Проект “Восток”</a></li>
+                    <li class="footer__sub-menu-link "><a href="">ТЭЦ Калининграда</a></li>
+                </ul>
+            </li>
+            <li class="footer__menu-link">Социальные сети
+                <span class="footer__menu-arrow arrow "></span>
+                <ul class="footer__sub-menu-list ">
+                    <li class="footer__sub-menu-link "><a href="">VK.com</a></li>
+                    <li class="footer__sub-menu-link "><a href="">Instagram</a></li>
+                    <li class="footer__sub-menu-link "><a href="">Facebook</a></li>
+                    <li class="footer__sub-menu-link "><a href="">Twitter</a></li>
+                </ul>
+            </li>
         </ul>
-
-        <ul class="footer__menu-list">
-            <a href="" class="footer__menu-list-title">Основные ссылки</a>
-
-            <ul class="footer__sub-menu-list">
-                <li class="footer__sub-menu-link"><a href="#header">Главная</a></li>
-                <li class="footer__sub-menu-link"><a href="#all-projects">Наши проекты</a></li>
-                <li class="footer__sub-menu-link"><a href="#all-services">Наши услуги</a></li>
-                <li class="footer__sub-menu-link"><a href="#contacts">Контакты</a></li>
-            </ul>
-        </ul>
-        <ul class="footer__menu-list">
-            <a href="" class="footer__menu-list-title">Наши проекты</a>
-            <ul class="footer__sub-menu-list">
-                <li class="footer__sub-menu-link"><a href="">РосНано</a></li>
-                <li class="footer__sub-menu-link"><a href="">Сколково</a></li>
-                <li class="footer__sub-menu-link"><a href="">Проект “Восток”</a></li>
-                <li class="footer__sub-menu-link"><a href="">ТЭЦ Калининграда</a></li>
-            </ul>
-        </ul>
-
-        <ul class="footer__menu-list">
-            <a href="" class="footer__menu-list-title">Социальные сети</a>
-            <ul class="footer__sub-menu-list">
-                <li class="footer__sub-menu-link"><a href="">VK.com</a></li>
-                <li class="footer__sub-menu-link"><a href="">Instagram</a></li>
-                <li class="footer__sub-menu-link"><a href="">Facebook</a></li>
-                <li class="footer__sub-menu-link"><a href="">Twitter</a></li>
-            </ul>
-        </ul>
-
     </nav>
-    <div class="footer__copy">(с) 2019. Все права защищены.</div>
+    <div class="footer__copy ">(с) 2019. Все права защищены.</div>
+
 </footer>
