--- a/#source/header.html
+++ b/#source/header.html
@@ -1,15 +1,16 @@
 <header class="header block" id="header">
-    <!-- <div class="header__burger">
-        <span></span>
-    </div> -->
-    <!-- <div class="header__menu-container" id="menu">
-        <nav class="header__menu menu">
-            <a class="menu__link white-text" href="#header">Главная</a>
-            <a class="menu__link white-text" href="#all-projects">Наши проекты</a>
-            <a class="menu__link white-text" href="#services">Услуги</a>
-            <a class="menu__link white-text" href="#subscribe">Новости</a>
-            <a class="menu__link white-text" href="#contacts">Контакты</a>
-        </nav>
-    </div> -->
-
+    <div class="header__container container">
+        <div class="header__burger">
+            <span></span>
+        </div>
+        <div class="header__menu-container">
+            <nav class="header__menu menu" id="menu">
+                <a class="menu__link white-text" href="#first-screen">Главная</a>
+                <a class="menu__link white-text" href="#all-projects">Наши проекты</a>
+                <a class="menu__link white-text" href="#services">Услуги</a>
+                <a class="menu__link white-text" href="#subscribe">Новости</a>
+                <a class="menu__link white-text" href="#contacts">Контакты</a>
+            </nav>
+        </div>
+    </div>
 </header>
