--- a/#source/footer.html
+++ b/#source/footer.html
@@ -4,9 +4,9 @@
             <li class="footer__menu-link contact-links" id="contacts">Контактная информация
                 <span class="footer__menu-arrow  arrow"></span>
                 <ul class="footer__sub-menu-list">
-                    <li class="footer__sub-menu-link contact-link__email"><a href="mailto:test@test.ru">test@test.ru</a></li>
-                    <li class="footer__sub-menu-link contact-link__phone"><a href="tel:+87775556699">+8 777 555 66 99</a></li>
-                    <li class="footer__sub-menu-link contact-link__address"><a href="">Москва, Бульвар Ленина 33</a></li>
+                    <li class="footer__sub-menu-link contact-link__email"><a href="mailto:test@test.ru">test@test.com</a></li>
+                    <li class="footer__sub-menu-link contact-link__phone"><a href="tel:+380952222295">+380 95 22 222 95</a></li>
+                    <li class="footer__sub-menu-link contact-link__address"><a href="">ул. Небесной сотни, 15</a></li>
                 </ul>
             </li>
             <li class="footer__menu-link">Основные ссылки
@@ -38,6 +38,6 @@
             </li>
         </ul>
     </nav>
-    <div class="footer__copy ">(с) 2019. Все права защищены.</div>
+    <div class="footer__copy ">(с) 2022. Все права защищены.</div>
 
 </footer>
